# spectral_explorer

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: example_openai_usage.py  example_slim_usage.py  example_usage.py  example_usage_visual.py
examples/saves/: world_akhel.pkl
spectral_explorer/: configs.py  gui.py  run.py  utils.py
